<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".activity.LoginActivity"
	tools:showIn="@layout/activity_login">

	<ImageView
		android:id="@+id/account_circle_image_RL"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="124dp"
		android:src="@drawable/ic_other_account_circle"
		android:layout_width="80dp"
		android:layout_height="80dp"/>

	<android.support.design.widget.TextInputLayout
		android:id="@+id/login_id_RL"
		android:layout_marginTop="32dp"
		android:layout_centerHorizontal="true"
		android:layout_below="@id/account_circle_image_RL"
		android:layout_width="240dp"
		android:layout_height="wrap_content">

		<EditText
			android:id="@+id/login_id"
			android:singleLine="true"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/student_id"/>
	</android.support.design.widget.TextInputLayout>

	<android.support.design.widget.TextInputLayout
		android:id="@+id/password_RL"
		android:layout_marginTop="32dp"
		android:layout_centerHorizontal="true"
		android:layout_below="@id/login_id_RL"
		android:layout_width="240dp"
		android:layout_height="wrap_content">

		<EditText
			android:id="@+id/password"
			android:singleLine="true"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/password"/>
	</android.support.design.widget.TextInputLayout>

	<Button
		android:id="@+id/login"
		android:layout_marginTop="60dp"
		android:text="@string/login"
		android:layout_centerHorizontal="true"
		android:layout_below="@id/password_RL"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"/>
</RelativeLayout>
